--- a/report.rmd
+++ b/report.rmd
@@ -5,11 +5,11 @@ date: "May 4, 2020"
 output: html_document
 ---
 
-#```{r setup, include=FALSE}
-#knitr::opts_chunk$set(echo = TRUE)
-#```
+<!-- #```{r setup, include=FALSE} -->
+<!-- #knitr::opts_chunk$set(echo = TRUE) -->
+<!-- #``` -->
 
-## R Markdown
+<!-- ### R Markdown -->
 
 <!-- This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>. -->
 
